--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 
 .App {
   text-align: center;
+   
 }
 
 .App-logo {
@@ -48,7 +49,7 @@ background-color:  #007aff;
 }
 .bg-banner {
   --tw-bg-opacity: 1;
-  background-color: rgb(8 25 45/var(--tw-bg-opacity));
+  background-color: rgba(3, 79, 167, 0.984);
 }
 .font-inter{
   font-family: Inter,sans-serif;
