--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
 background-color:  #007aff;
 }
 .homeBg{
-  background-color:  rgb(8 25 45/var(--tw-bg-opacity))!important;
+  background-color:  rgb(8 25 45)!important;
 }
 .bg-banner {
   --tw-bg-opacity: 1;
